agregados contadores de victoria y estilizado el loguin

--- a/index.html
+++ b/index.html
@@ -1,40 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <!-- Estilos Propios -->
-    <link rel="stylesheet" href="./styles/css/main.css" />
+<head>
+  <!-- Required meta tags -->
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <!-- transiciones -->
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
-    />
+  <!-- Estilos Propios -->
+  <link rel="stylesheet" href="./styles/css/main.css" />
 
-    <!-- Bootstrap CSS -->
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
-      crossorigin="anonymous"
-    />
-    <title>Proyecto 2</title>
-  </head>
-  <body style="background-color: black;">
-    <!-- /////////////////////////
+  <!-- transiciones -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+
+  <!-- Bootstrap CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
+  <title>Proyecto 2</title>
+</head>
+
+<body style="background-color: black;">
+  <!-- /////////////////////////
               HEADER
     ////////////////////////////-->
-    <header class="bg-red-primary header-poke" id="header-poke">
+  <header class="header-poke" id="header-poke">
+    <div class="header-bg">
       <div class="container d-flex flex-column text-center pb-5">
         <div class="img-container">
-          <img
-            src="./assets/img/pokemon/Pokemon-Logo.png"
-            class="img-fluid pokemon-logo"
-            alt="Logo Pokemon"
-          />
+          <img src="./assets/img/pokemon/Pokemon-Logo.png" class="img-fluid pokemon-logo" alt="Logo Pokemon" />
         </div>
         <h1>Bienvenido entrenador</h1>
       </div>
@@ -46,167 +38,136 @@
         <h2 class="login-title">Indica tu nombre</h2>
         <form id="form" method="POST">
           <!-- name input-->
-          <label for="name">Nombre</label>
-          <input type="text" name="name" id="input_name" class="input-field" />
+          <input type="text" name="name" id="input_name" autocomplete="off" class="input-field" />
 
           <!-- submit input-->
-          <input
-            type="button"
-            value="login"
-            class="btn-submit"
-            id="submit-button"
-          />
+          <input type="button" value="login" class="btn-submit" id="submit-button" />
         </form>
       </div>
-    </header>
+    </div>
+  </header>
 
-    <!-- /////////////////////////
+  <!-- /////////////////////////
               BATTLEFIELD
     ////////////////////////////-->
-    <div class="backgound" style="margin-top: 20px">
-      <div class="battlefield d-none" id="battlefield">
-        <div class="container">
-          <!-- COMPUTER-FIELD -->
-          <div class="computer-field">
-            <div class="d-flex justify-content-center" id="div_cards_pc">
-              <div
-                class="carta_player card-pok card-back card_pc"
-                id="crd_pc_1"
-              ></div>
-              <div
-                class="carta_player card-pok card-back card_pc"
-                id="crd_pc_2"
-              ></div>
-              <div
-                class="carta_player card-pok card-back card_pc"
-                id="crd_pc_3"
-              ></div>
-            </div>
-          </div>
-          <div class="spacer"></div>
+  <div class="battlefield d-none" id="battlefield">
 
-          <!-- BATTLE-CARDS -->
-          <div class="battle-cards">
-            <div class="d-flex justify-content-center">
-              <div
-                class="carta_player pokemon-card card-pok"
-                id="crd_fight_bg_1"
-              >
-                <div class="face front">
-                  <div class="pokemon-name-hp">
-                    <span class="pokemon-name" id="crd_fight_name_1"
-                      >Charizard</span
-                    >
-                    <span class="pokemon-id" id="crd_fight_id_1">8</span>
-                  </div>
-                  <div class="imageContainer">
-                    <img
-                      id="crd_fight_img_1"
-                      src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/6.png"
-                      style="width: 120px"
-                    />
-                  </div>
-                  <div class="pokemon-type-id">
-                    <span class="pokemon-hp" id="crd_fight_stats_1">120</span>
-                    <img class="pokemon-type" id="crd_fight_type_1"></img>
-                  </div>
+    <!--  score -->
+    <div class="backgound fondo">
+      <div class="scorers2" id="pc-score">
+        <div class="pc_logo"></div>
+        <div class="pokeball" id="pokeball_pc_1"></div>
+        <div class="pokeball" id="pokeball_pc_2"></div>
+        <div class="pokeball" id="pokeball_pc_3"></div>
+      </div>
+      <div class="scorers1" id="user-score">
+        <div class="pokeball" id="pokeball_user_1"></div>
+        <div class="pokeball" id="pokeball_user_2"></div>
+        <div class="pokeball" id="pokeball_user_3"></div>
+        <div class="player_logo" id></div>
+      </div>
+
+    <div class="container">
+        <!-- COMPUTER-FIELD -->
+        <div class="computer-field">
+          <div class="d-flex justify-content-center" id="div_cards_pc">
+            <div class="carta_player card-pok card-back card_pc" id="crd_pc_1"></div>
+            <div class="carta_player card-pok card-back card_pc" id="crd_pc_2"></div>
+            <div class="carta_player card-pok card-back card_pc" id="crd_pc_3"></div>
+          </div>
+        </div>
+        <div class="spacer"></div>
+
+        <!-- BATTLE-CARDS -->
+        <div class="battle-cards">
+          <div class="d-flex justify-content-center">
+            <div class="carta_player pokemon-card card-pok" id="crd_fight_bg_1">
+              <div class="face front">
+                <div class="pokemon-name-hp">
+                  <span class="pokemon-name" id="crd_fight_name_1">Charizard</span>
+                  <span class="pokemon-id" id="crd_fight_id_1">8</span>
+                </div>
+                <div class="imageContainer">
+                  <img id="crd_fight_img_1"
+                    src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/6.png"
+                    style="width: 120px" />
+                </div>
+                <div class="pokemon-type-id">
+                  <span class="pokemon-hp" id="crd_fight_stats_1">120</span>
+                  <img class="pokemon-type" id="crd_fight_type_1"></img>
                 </div>
               </div>
+            </div>
 
-              <div
-                class="carta_player pokemon-card card-pok"
-                id="crd_fight_bg_2"
-              >
-                <div class="face front">
-                  <div class="pokemon-name-hp">
-                    <span class="pokemon-name" id="crd_fight_name_2"
-                      >Charizard</span
-                    >
-                    <span class="pokemon-id" id="crd_fight_id_2">8</span>
-                  </div>
-                  <div class="imageContainer">
-                    <img
-                      id="crd_fight_img_2"
-                      src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/6.png"
-                      style="width: 120px"
-                    />
-                  </div>
-                  <div class="pokemon-type-id">
-                    <span class="pokemon-hp" id="crd_fight_stats_2">120</span>
-                    <img class="pokemon-type"  id="crd_fight_type_2"></img>
-                  </div>
+            <div class="carta_player pokemon-card card-pok" id="crd_fight_bg_2">
+              <div class="face front">
+                <div class="pokemon-name-hp">
+                  <span class="pokemon-name" id="crd_fight_name_2">Charizard</span>
+                  <span class="pokemon-id" id="crd_fight_id_2">8</span>
+                </div>
+                <div class="imageContainer">
+                  <img id="crd_fight_img_2"
+                    src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/6.png"
+                    style="width: 120px" />
+                </div>
+                <div class="pokemon-type-id">
+                  <span class="pokemon-hp" id="crd_fight_stats_2">120</span>
+                  <img class="pokemon-type" id="crd_fight_type_2"></img>
                 </div>
               </div>
             </div>
           </div>
+        </div>
 
-          <!-- USER-FIELD -->
-          <div class="user-field" style="padding-top:35px">
-            <div class="d-flex justify-content-center">
-              <div
-                class="carta_player pokemon-card card-pok"
-                id="crd_plyr_bg_1"
-              >
-                <div class="face front">
-                  <div class="pokemon-name-hp">
-                    <span class="pokemon-name" id="crd_plyr_name_1"
-                      >Charizard</span
-                    >
-                    <span class="pokemon-id" id="crd_plyr_id_1">8</span>
-                  </div>
-                  <div class="imageContainer">
-                    <img id="crd_plyr_img_1" style="width: 120px" />
-                  </div>
-                  <div class="pokemon-type-id">
-                    <span class="pokemon-hp" id="crd_plyr_stats_1">120</span>
-                    <img class="pokemon-type"  id="crd_plyr_type_1"></img>
-                  </div>
+        <!-- USER-FIELD -->
+        <div class="user-field" style="padding-top:35px">
+          <div class="d-flex justify-content-center">
+            <div class="carta_player pokemon-card card-pok" id="crd_plyr_bg_1">
+              <div class="face front">
+                <div class="pokemon-name-hp">
+                  <span class="pokemon-name" id="crd_plyr_name_1">Charizard</span>
+                  <span class="pokemon-id" id="crd_plyr_id_1">8</span>
+                </div>
+                <div class="imageContainer">
+                  <img id="crd_plyr_img_1" style="width: 120px" />
+                </div>
+                <div class="pokemon-type-id">
+                  <span class="pokemon-hp" id="crd_plyr_stats_1">120</span>
+                  <img class="pokemon-type" id="crd_plyr_type_1"></img>
                 </div>
               </div>
+            </div>
 
-              <div
-                class="carta_player pokemon-card card-pok"
-                id="crd_plyr_bg_2"
-              >
-                <div class="face front">
-                  <div class="pokemon-name-hp">
-                    <span class="pokemon-name" id="crd_plyr_name_2"
-                      >Charizard</span
-                    >
-                    <span class="pokemon-id" id="crd_plyr_id_2">8</span>
-                  </div>
-                  <div class="imageContainer">
-                    <img id="crd_plyr_img_2" style="width: 120px" />
-                  </div>
-                  <div class="pokemon-type-id">
-                    <span class="pokemon-hp" id="crd_plyr_stats_2">120</span>
-                    <img class="pokemon-type"  id="crd_plyr_type_2"></img>
-                  </div>
+            <div class="carta_player pokemon-card card-pok" id="crd_plyr_bg_2">
+              <div class="face front">
+                <div class="pokemon-name-hp">
+                  <span class="pokemon-name" id="crd_plyr_name_2">Charizard</span>
+                  <span class="pokemon-id" id="crd_plyr_id_2">8</span>
+                </div>
+                <div class="imageContainer">
+                  <img id="crd_plyr_img_2" style="width: 120px" />
+                </div>
+                <div class="pokemon-type-id">
+                  <span class="pokemon-hp" id="crd_plyr_stats_2">120</span>
+                  <img class="pokemon-type" id="crd_plyr_type_2"></img>
                 </div>
               </div>
+            </div>
 
-              <div
-                class="carta_player pokemon-card card-pok"
-                id="crd_plyr_bg_3"
-              >
-                <div class="face front">
-                  <div class="pokemon-name-hp">
-                    <span class="pokemon-name" id="crd_plyr_name_3"
-                      >Charizard</span
-                    >
-                    <span class="pokemon-id" id="crd_plyr_id_3">8</span>
-                  </div>
-                  <div class="imageContainer">
-                    <img
-                      id="crd_plyr_img_3"
-                      src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/6.png"
-                      style="width: 120px"
-                    />
-                  </div>
-                  <div class="pokemon-type-id">
-                    <span class="pokemon-hp" id="crd_plyr_stats_3">120</span>
-                    <img class="pokemon-type"  id="crd_plyr_type_3"></img>
-                  </div>
+            <div class="carta_player pokemon-card card-pok" id="crd_plyr_bg_3">
+              <div class="face front">
+                <div class="pokemon-name-hp">
+                  <span class="pokemon-name" id="crd_plyr_name_3">Charizard</span>
+                  <span class="pokemon-id" id="crd_plyr_id_3">8</span>
+                </div>
+                <div class="imageContainer">
+                  <img id="crd_plyr_img_3"
+                    src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/6.png"
+                    style="width: 120px" />
+                </div>
+                <div class="pokemon-type-id">
+                  <span class="pokemon-hp" id="crd_plyr_stats_3">120</span>
+                  <img class="pokemon-type" id="crd_plyr_type_3"></img>
                 </div>
               </div>
             </div>
@@ -214,36 +175,34 @@
         </div>
       </div>
     </div>
+  </div>
 
 
 
-    <table class="table container d-none" id="tabla-resutlados">
-      <thead>
-        <tr>
-          <th scope="col">Nombre</th>
-          <th scope="col">Victorias</th>
-          <th scope="col">Derrotas</th>
-        </tr>
-      </thead>
-      <tbody id="results">
+  <table class="table container d-none" id="tabla-resutlados">
+    <thead>
+      <tr>
+        <th scope="col">Nombre</th>
+        <th scope="col">Victorias</th>
+        <th scope="col">Derrotas</th>
+      </tr>
+    </thead>
+    <tbody id="results">
 
-      </tbody>
-    </table>
+    </tbody>
+  </table>
 
 
-    <!-- JS Propio -->
-    <script src="./js/pokemon-fights.js"></script>
+  <!-- JS Propio -->
+  <script src="./js/pokemon-fights.js"></script>
 
-    <!-- holo-cards -->
-    <!-- <script src="./js/holo-cards.js"></script> -->
+  <!-- holo-cards -->
+  <!-- <script src="./js/holo-cards.js"></script> -->
 
-    <!-- Option 1: Bootstrap Bundle with Popper -->
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-      crossorigin="anonymous"
-    ></script>
-  </body>
+  <!-- Option 1: Bootstrap Bundle with Popper -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous">
+  </script>
+</body>
+
 </html>
-
-
