--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
         <div class="pokeball" id="pokeball_pc_2"></div>
         <div class="pokeball" id="pokeball_pc_3"></div>
       </div>
+      <div class="turn" id="round"></div>
       <div class="scorers1" id="user-score">
         <div class="pokeball" id="pokeball_user_1"></div>
         <div class="pokeball" id="pokeball_user_2"></div>
