logica de turno

--- a/index.html
+++ b/index.html
@@ -56,15 +56,15 @@
     <div class="backgound fondo">
       <div class="scorers2" id="pc-score">
         <div class="pc_logo"></div>
-        <div class="pokeball" id="pokeball_pc_1"></div>
-        <div class="pokeball" id="pokeball_pc_2"></div>
-        <div class="pokeball" id="pokeball_pc_3"></div>
+        <div class="pokeball invisible" id="pkbl_pc_1"></div>
+        <div class="pokeball invisible" id="pkbl_pc_2"></div>
+        <div class="pokeball invisible" id="pkbl_pc_3"></div>
       </div>
       <div class="turn" id="round"></div>
       <div class="scorers1" id="user-score">
-        <div class="pokeball" id="pokeball_user_1"></div>
-        <div class="pokeball" id="pokeball_user_2"></div>
-        <div class="pokeball" id="pokeball_user_3"></div>
+        <div class="pokeball invisible" id="pkbl_player_3"></div>
+        <div class="pokeball invisible" id="pkbl_player_2"></div>
+        <div class="pokeball invisible" id="pkbl_player_1"></div>
         <div class="player_logo" id></div>
       </div>
 
