--- a/index.html
+++ b/index.html
@@ -254,7 +254,14 @@
         id="volver-jugar"
       />
 
-      <a class="btn-submit"href="./">Cambiar Usuario</a>
+      <input
+      type="button"
+      value="Cambiar Usuario"
+      class="btn-submit"
+      id="cambiar-usuario"
+    />
+
+      <!-- <a class="btn-submit"href="./">Cambiar Usuario</a> -->
 
       <a class="btn-submit"href="./">Salir</a>
 
