--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-<<<<<<< HEAD
   <head>
     <!-- Required meta tags -->
     <meta charset="utf-8" />
@@ -26,28 +25,6 @@
   </head>
   <body id="body" class="body-black">
     <!-- /////////////////////////
-=======
-
-<head>
-  <!-- Required meta tags -->
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-
-  <!-- Estilos Propios -->
-  <link rel="stylesheet" href="./styles/css/main.css" />
-
-  <!-- transiciones -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
-
-  <!-- Bootstrap CSS -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
-  <title>Proyecto 2</title>
-</head>
-
-<body style="background-color: black;">
-  <!-- /////////////////////////
->>>>>>> dev
               HEADER
     ////////////////////////////-->
   <header class="header-poke" id="header-poke">
@@ -66,7 +43,7 @@
         <h2 class="login-title">Indica tu nombre</h2>
         <form id="form" method="POST">
           <!-- name input-->
-          <input type="text" name="name" id="input_name" autocomplete="off" class="input-field" />
+          <input type="text" name="name" id="input_name" autocomplete="off" class="input-field" required/>
 
           <!-- submit input-->
           <input type="button" value="login" class="btn-submit" id="submit-button" />
@@ -78,27 +55,6 @@
   <!-- /////////////////////////
               BATTLEFIELD
     ////////////////////////////-->
-<<<<<<< HEAD
-    <div class="backgound">
-      <div class="battlefield d-none" id="battlefield">
-        <div class="container">
-          <!-- COMPUTER-FIELD -->
-          <div class="computer-field">
-            <div class="d-flex justify-content-center" id="div_cards_pc">
-              <div
-                class="carta_player card-pok card-back card_pc"
-                id="crd_pc_1"
-              ></div>
-              <div
-                class="carta_player card-pok card-back card_pc"
-                id="crd_pc_2"
-              ></div>
-              <div
-                class="carta_player card-pok card-back card_pc"
-                id="crd_pc_3"
-              ></div>
-            </div>
-=======
   <div class="battlefield d-none" id="battlefield">
 
     <!--  score -->
@@ -124,7 +80,6 @@
             <div class="carta_player card-pok card-back card_pc" id="crd_pc_1"></div>
             <div class="carta_player card-pok card-back card_pc" id="crd_pc_2"></div>
             <div class="carta_player card-pok card-back card_pc" id="crd_pc_3"></div>
->>>>>>> dev
           </div>
         </div>
         <div class="spacer"></div>
@@ -228,7 +183,7 @@
     </div>
   </div>
 
-    <button id="trigger-table">tabla</button>
+    <!-- <button id="trigger-table">tabla</button> -->
 
     <div class="table-container d-none body-red" id="tabla-resutlados">
       <div class="header-table">
@@ -267,7 +222,6 @@
         id="volver-jugar"
       />
 
-<<<<<<< HEAD
       <input
       type="button"
       value="Cambiar Usuario"
@@ -281,7 +235,6 @@
 
     </div>
 
-=======
   <table class="table container d-none" id="tabla-resutlados">
     <thead>
       <tr>
@@ -291,7 +244,6 @@
       </tr>
     </thead>
     <tbody id="results">
->>>>>>> dev
 
     </tbody>
   </table>
