--- a/index.html
+++ b/index.html
@@ -1,30 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <!-- Estilos Propios -->
-    <link rel="stylesheet" href="./styles/css/main.css" />
+<head>
+  <!-- Required meta tags -->
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <!-- transiciones -->
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
-    />
+  <!-- Estilos Propios -->
+  <link rel="stylesheet" href="./styles/css/main.css" />
 
-    <!-- Bootstrap CSS -->
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
-      crossorigin="anonymous"
-    />
-    <title>Proyecto 2</title>
-  </head>
-  <body id="body" class="body-black">
-    <!-- /////////////////////////
+  <!-- transiciones -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+
+  <!-- Bootstrap CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
+  <title>Proyecto 2</title>
+</head>
+
+<body id="body" class="body-black">
+  <!-- /////////////////////////
               HEADER
     ////////////////////////////-->
   <header class="header-poke" id="header-poke">
@@ -43,7 +38,7 @@
         <h2 class="login-title">Indica tu nombre</h2>
         <form id="form" method="POST">
           <!-- name input-->
-          <input type="text" name="name" id="input_name" autocomplete="off" class="input-field" required/>
+          <input type="text" name="name" id="input_name" autocomplete="off" class="input-field" required />
 
           <!-- submit input-->
           <input type="button" value="login" class="btn-submit" id="submit-button" />
@@ -66,6 +61,7 @@
         <div class="pokeball invisible" id="pkbl_pc_3"></div>
       </div>
       <div class="turn" id="round"></div>
+      <div class="winner_loser" id="winner_loser"></div>
       <div class="scorers1" id="user-score">
         <div class="pokeball invisible" id="pkbl_player_3"></div>
         <div class="pokeball invisible" id="pkbl_player_2"></div>
@@ -73,7 +69,7 @@
         <div class="player_logo" id></div>
       </div>
 
-    <div class="container">
+      <div class="container">
         <!-- COMPUTER-FIELD -->
         <div class="computer-field">
           <div class="d-flex justify-content-center" id="div_cards_pc">
@@ -183,71 +179,51 @@
     </div>
   </div>
 
-    <!-- <button id="trigger-table">tabla</button> -->
+  <!-- <button id="trigger-table">tabla</button> -->
 
-    <div class="table-container d-none body-red" id="tabla-resutlados">
-      <div class="header-table">
-        <div class="container d-flex flex-column text-center pb-5">
-          <div class="img-container">
-            <img
-              src="./assets/img/pokemon/Pokemon-Logo.png"
-              class="img-fluid pokemon-logo"
-              alt="Logo Pokemon"
-            />
-          </div>
-      <h2 class="text-center" id="resultados">Tus resultados</h2>
-      <div id="userResults">
-
-      </div>
-
+  <div class="table-container d-none body-black" id="tabla-resutlados">
+    <div class="table-fondo">
+    <div class="header-table">
+      <div class="container d-flex flex-column text-center pb-5">
+        <div class="img-container">
+          <img src="./assets/img/pokemon/Pokemon-Logo.png" class="img-fluid pokemon-logo" alt="Logo Pokemon" />
+        </div>
+        <h2 class="text-center" id="resultados">Tus resultados</h2>
+        <div id="userResults">
         </div>
       </div>
-      <h1 class="text-center">Clasificación</h1>
-      <table class="table container " >
-        <thead>
-          <tr>
-            <th scope="col">Nombre</th>
-            <th scope="col">Victorias</th>
-            <th scope="col">Derrotas</th>
-          </tr>
-        </thead>
-        <tbody id="results">
-        </tbody>
-      </table>
-      <div class="buttons d-flex container">
-        <input
-        type="button"
-        value="Volver a jugar"
-        class="btn-submit"
-        id="volver-jugar"
-      />
-
-      <input
-      type="button"
-      value="Cambiar Usuario"
-      class="btn-submit"
-      id="cambiar-usuario"
-    />
-
-      <!-- <a class="btn-submit"href="./">Cambiar Usuario</a> -->
-
-      <a class="btn-submit"href="./">Salir</a>
-
     </div>
-
-  <table class="table container d-none" id="tabla-resutlados">
-    <thead>
-      <tr>
-        <th scope="col">Nombre</th>
-        <th scope="col">Victorias</th>
-        <th scope="col">Derrotas</th>
-      </tr>
-    </thead>
-    <tbody id="results">
-
-    </tbody>
-  </table>
-
+    <h1 class="text-center">Clasificación</h1>
+    <table class="table container ">
+      <thead>
+        <tr>
+          <th scope="col">Nombre</th>
+          <th scope="col">Victorias</th>
+          <th scope="col">Derrotas</th>
+        </tr>
+      </thead>
+      <tbody id="results">
+      </tbody>
+    </table>
+    <div class="buttons d-flex container">
+      <input type="button" value="Volver a jugar" class="btn-submit" id="volver-jugar" />
+      <input type="button" value="Cambiar Usuario" class="btn-submit" id="cambiar-usuario" />
+      <!-- <a class="btn-submit"href="./">Cambiar Usuario</a> -->
+      <a class="btn-submit" href="./">Salir</a>
+    </div>
+    <table class="table container d-none" id="tabla-resutlados">
+      <thead>
+        <tr>
+          <th scope="col">Nombre</th>
+          <th scope="col">Victorias</th>
+          <th scope="col">Derrotas</th>
+        </tr>
+      </thead>
+      <tbody id="results">
+      </tbody>
+    </table>
+  </div>
+  </div>
 
   <!-- JS Propio -->
   <script src="./js/pokemon-fights.js"></script>
