--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
     ////////////////////////////-->
       <div class="login-box" id="login-box">
         <h2 class="login-title">Indica tu nombre</h2>
-        <form id="form" method="POST">
+        <form id="form" method="POST" autocomplete="off">
           <!-- name input-->
-          <input type="text" name="name" id="input_name" autocomplete="off" class="input-field" required />
+          <input type="text" name="name" id="input_name" class="input-field" autocomplete="off" required />
 
           <!-- submit input-->
           <input type="button" value="login" class="btn-submit" id="submit-button" />
